--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="style.css">
+        <title>Awesome Blog</title>
     </head>
     <body>
-        
-    </body>
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <i class="fa-solid fa-house"></i>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobile">
+                    <span class="navbar-toogler-icon"></span>
+                </button>
+                <div id="mobile" class="collapse navbar-collapse">
+                
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="blogs.html" class="nav-link">Blogs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input type="text" class="form-control me-1" placeholder="Search">
+                        <button class="btn btn-warning">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </nav>
 
+        <header>
+            <div class="text-center pt-5 mt-5 px-4 border-bottom">
+                <h1 class="display-4 fw-bold">Awesome Blog</h1>
+                <div class="col-lg-6 mx-auto">
+                    <p class="lead mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur culpa odio, animi libero nihil nostrum minus nam. Et, dolorum saepe?</p>
+                    <div class="mb-5 d-grid gap-2 d-md-flex justify-content-center">
+                        <button class="btn btn-primary btn-lg">
+                            <i class="fa-solid fa-caret-right"></i>
+                            Button
+                        </button>
+                        <button class="btn btn-outline-secondary btn-lg">
+                            <i class="fa-solid fa-caret-right"></i>
+                            Button
+                        </button>
+                    </div>
+                    <div class="overflow-hidden" style="max-height: 30vh;">
+                        <div class="container px-5">
+                            <img src="img/bg.png" class="img-fluid border rounded-3 shadow-lg mb-4"
+                            width="700" height="500">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    </body>
 </html>
