--- a/index.html
+++ b/index.html
@@ -64,6 +64,99 @@
                 </div>
             </div>
         </header>
+        
+        <main>
+            <div class="bg-dark px-5 py-5 text-center text-white">
+                <div class="py-5">
+                    <h1 class="display-5 fw-bold">Lorem, ipsum.</h1>
+                    <div class="col-lg-6 mx-auto">
+                        <p class="lead mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur culpa odio, animi libero nihil nostrum minus nam. Et, dolorum saepe?</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-center">
+                            <button class="btn btn-outline-warning btn-lg">
+                                <i class="fa-solid fa-caret-right"></i>
+                                Button
+                            </button>
+                            <button class="btn btn-outline-light btn-lg">
+                                <i class="fa-solid fa-caret-right"></i>
+                                Button
+                            </button>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+
+            <div class="container my-4">
+                <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g4">
+                    <div class="col">
+                        <div class="card mb-3 shadow">
+                            <img src="img/1.jpeg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, exercitationem.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 shadow">
+                            <img src="img/2.jpeg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, exercitationem.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 shadow">
+                            <img src="img/3.jpeg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, exercitationem.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 shadow">
+                            <img src="img/4.jpeg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, exercitationem.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 shadow">
+                            <img src="img/5.jpeg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, exercitationem.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 shadow">
+                            <img src="img/6.jpeg" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Lorem, ipsum.</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, exercitationem.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <footer class="py-5 bg-dark text-white">
+            <div class="container text-center">
+                <span>All Rights Reserved. @2023</span>
+            </div>
+        </footer>
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
