--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="blogs.html" class="nav-link">Blogs</a>
